--- a/article.html
+++ b/article.html
@@ -8,23 +8,24 @@
         <title>Title of the page</title>
         <link rel="stylesheet" type="text/css" href="styles/styles.css">
     </head>
-
     <body>
 
         <div>
-            <header>
-                <div>
-                    <section>
-                        <img src="assets/icons/readable.png" alt="our sample icon"/>
+            <header class="header-main">
+                <div class="wrapper">
+                    <section class="logo">
+                        <figure class="icon">
+                            <img src="assets/icons/readable.png" alt="our sample icon"/>
+                        </figure>
                         <h1>Readable</h1>
                     </section>
 
                     <nav>
-                        <ul>
+                        <ul class="nav-horizontal">
                             <li><a href="#">Home</a></li>
                             <li><a href="#">Categories</a></li>
                             <li><a href="#">Contact</a></li>
-                            <li><buton aria-label="Click to search"><img src="assets/icons/search.png" alt="Search"></buton></li>
+                            <li><buton aria-label="Click to search" class="icon"><img src="assets/icons/search.png" alt="Search"></buton></li>
                         </ul>
                     </nav>
                 </div>
@@ -35,9 +36,9 @@
                 <article>
                     <div>
                         <header>
-                            
+
                                 <h1>Office Relocation for Ultimate Courses</h1>
-                                <a href="#">Business</a>
+                                <a href="#" class="category">Business</a>
                                 <div>
                                     <img src="assets/icons/profile.png" alt="Profile image">
                                     <a href="#" rel="author">Rachael Green</a>
@@ -66,23 +67,23 @@
                 </div>
             </main>
 
-            <footer>
-                <div>
+            <footer class="footer-main">
+                <div class="wrapper">
                     <p>&copy; copyright 2020 Readable</p>
 
-                    <nav>
+                    <nav class="nav-horizontal">
                         <a href="#">Privacy Policy</a>
                         <a href="#">Terms & Conditions</a>
                     </nav>
 
                     <section>
-                        <a href="#" aria-label="Follow us on Twitter">
+                        <a href="#" aria-label="Follow us on Twitter" class="icon">
                             <img src="assets/icons/twitter.png"  alt="twitter"/>
                         </a>
-                        <a href="#" aria-label="Follow us on Instagram">
+                        <a href="#" aria-label="Follow us on Instagram" class="icon">
                             <img src="assets/icons/insta.png"  alt="instagram"/>
                         </a>
-                        <a href="#" aria-label="Follow us on Faceboook">
+                        <a href="#" aria-label="Follow us on Faceboook" class="icon">
                             <img src="assets/icons/face.png"  alt="facebook"/>
                         </a>
                     </section>
