Minor improvements, image was big cover valud was not appropriate

--- a/landing.html
+++ b/landing.html
@@ -35,8 +35,7 @@
             <main class="wrapper">
                 <article class="card card-big">
                     <figure>
-                        <!--<img src="assets/icons/building.jpg" alt="An abstract photo of building">-->
-                        <img src="assets/icons/1738.jpg" alt="An abstract photo of building"/>
+                        <img src="assets/icons/1738.jpg" alt="An abstract photo of building">
                     </figure>
                     <div class="card-info">
                         <header>
@@ -72,7 +71,7 @@
                                 </header>
                                 <p>Due to recent growth, a new building was built for the courses of business.</p>
                                 <a href="#" aria-label="Read more about office relocation">Read more &longrightarrow;</a>
-                         </div>
+                             </div>
                         </article>
 
 
